--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,21 @@
+/* html, body {
+    margin: 0;
+    padding: 0;
+    width: 100vw;
+    height: 100vh;
+} */
+
 .App {
     display: flex;
     align-items: center;
     flex-direction: column;
     background-color: #118ab2;
     color: whitesmoke;
+
+    margin: 0;
+    padding: 0;
+    width: 100vw;
+    height: 100vh;
 }
 
 .nav {
@@ -34,10 +46,19 @@ a {
 }
 
 .Footer {
-    color:black;
+    /* color:black;
     display:flex;
     justify-content:center;
     align-items:center;
-    background-color: #1d3557;
-    height: 800%;
+    background-color: #1d3557;  */
+
+    text-align: center;
+    color: #ffffff;
+    background-color: #3aafa9;
+    position: absolute;
+    padding-top: 20px;
+    margin: 0;
+    width: 100%;
+    height: 2.5rem;
+    justify-content:center;
 }
